# 3d-printing

./: .gitignore  CMakeLists.txt  Ideas.md  README.md
3D Printer/: 2020_slot_cable_cover.stl  CMakeLists.txt  a1mini_containerized.py  a1mini_spool_holder.stl  a1mini_spool_holder_stopper.stl  a1mini_tube_holder.stl  filament_box_wheel.gcode  spool_turner.py  spool_turner.stl
3D Printer/Acceleration Measurement/: 4933936  4977191  Bed_Clip_Mount.gcode  CMakeLists.txt  CR10SProV2_ADXL345.gcode
Apartment/: Asset tracking.csv  CMakeLists.txt  apartment-bottom_floor.step  apartment-stairs.step  apartment-top_floor.step  apartment.FCStd  baseboard_measurement.py  baseboard_measurement.stl  big_denis.step  bottom_floor.stl  bottom_floor_old.stl  clother_dryer_roomba_helper.py  clothes_dryer_roomba_helper.stl  denis_table.py  expedit-kallax.scad  forhoja_kitchen.py  forhoja_stopper.stl  frostpunk_bottom.stl  frostpunk_top.stl  game_mat_holder.py  kallax4x4.fbx  kallax4x4.stl  kallax5x5.fbx  kallax5x5.stl  magnetoplan.py  magnetoplan_bottle_holder.stl  magnetoplan_holding_stick.stl  malm_bed_lowpoly.stl  nemesis_playermat_bottom.stl  nemesis_playermat_top.stl  pax_wardrobe_lowpoly.stl  shopping_cart_coin.py  shopping_cart_coin.stl
Apartment/Skadis/Battery Holder/: AA  AAA  CMakeLists.txt
Board games/: CMakeLists.txt
Board games/7 Wonders Duel/: 4674550  CMakeLists.txt
Board games/Ark Nova/: 5266169  5543151  CMakeLists.txt  all_together.scad  cards.scad  components.scad  differ.scad  kiosks_and_pavillions.gcode  kiosks_and_pavillions.stl  player_cover_fixed_smaller.gcode  player_pieces.gcode  special_enclosures.py  special_enclosures.stl
Board games/Arkham Horror LCG/: .gitignore  CMakeLists.txt  DividerRight.gcode  DividerRight.x3g  DividerX2.gcode  DividerX2.x3g  Part_2-4_divider.gcode  Part_2-4_divider.x3g  Part_45.gcode  Part_5.gcode  Part_5.x3g  Return To Organizer  Stands  chaos_capsules_box.stl  chaos_token_box.stl  clues_box.stl  core_organizer.py  damage_box.stl  everything_merged.scad  links_box.stl  resources_box.stl  standees_box.stl  turn_counter_box.stl
Board games/Cascadia/: 4996955  CMakeLists.txt  CardTray.gcode  StarterTileTray.gcode  TokenTray.gcode  test.gcode  test2.gcode
Board games/Eclipse/: 700356  CMakeLists.txt  hex-holder-cr10s.gcode  hex-holder.gcode  hex-holder.x3g
Board games/Everdell/: 5627753  CMakeLists.txt  Cart_Bottom.gcode  Cart_Top.gcode
Board games/Gloomhaven/: CCR10SPRO_hole_test.gcode  CCR10SPRO_hole_test_2.gcode  CCR10SPRO_hole_test_3.gcode  frame_left_bottom.cxprj  frame_left_bottom.stl  frame_left_top-K1 Max_0.4_Generic-PLA_2h0m.gcode  frame_left_top.stl  frame_left_top_PLA_1h18m.gcode  frame_right_bottom.stl  frame_right_top.stl  hole_test.stl  hole_test_2.stl  hole_test_3.stl  left_bottom.stl  map_frame.py  test.stl  test_2.stl
Board games/Great Western Trail/: 123_tiles.gcode  3531122  3884393  Bonus_Tiles.gcode  Bonus_Tiles.x3g  CMakeLists.txt  Cattle_Cards_Top.gcode  Cattle_Cards_Top.x3g  General_Tiles.gcode  General_Tiles.x3g  Goal_Cards_Middle.gcode  Goal_Cards_Middle.x3g  Money.gcode  Money.x3g  Player_Tray.gcode  Spacer_test.gcode  Starting_Cards_Bottom.gcode  Starting_Cards_Bottom.x3g  Thick_123_Tiles_flush.stl
Board games/Pax Pamir/: 4670404 Money Holder  5159200 Player Box  5200405 Everything  CMakeLists.txt  Pax-Geld.gcode  Pax_player_remix2.0.gcode  redone_blockholder.gcode  redone_bottom.gcode  redone_top.gcode
Board games/Root/: 3137237  3535443  CMakeLists.txt  Items_Holde_Top.gcode  Items_Holder_Bottom.gcode  Items_Holder_Bottom.x3g  Items_Holder_Top.gcode  Items_Holder_Top.x3g  Marquise_Lizard_Bottom.gcode  Marquise_Lizard_Bottom.x3g  Marquise_Lizard_Bottom_Q.gcode  Marquise_Lizard_Bottom_Q.x3g  Marquise_Lizard_Top.gcode  Marquise_Lizard_Top.x3g  Riverfolk_Top.gcode  Riverfolk_Top.x3g  Riverfolk_Woodland_Base.gcode  Riverfolk_Woodland_Base.x3g  Riverfolk_Woodland_Base_R.gcode  Riverfolk_Woodland_Base_R.x3g  RootUW_CardWhole.gcode  RootUW_EyrieV2.gcode  RootUW_EyrieV2.x3g  RootUW_MoleBottom.gcode  RootUW_MoleBottom.x3g  RootUW_MoleTop.gcode  RootUW_MoleTop.x3g  RootUW_VagabondV2.gcode  RootUW_VagabondV2.x3g  RootUW__DiceBottomNoStep.gcode  RootUW__DiceBottomNoStep.x3g  Woodland_Top.gcode  Woodland_Top.x3g  Woodland_Top_R.gcode  Woodland_Top_R.x3g
Board games/Sleeping Gods/: 4761566  CMakeLists.txt  Crew_Box_v2.gcode  Dungeon_Pieces.gcode
Board games/Sleeping Gods Primeval Peril/: 6343730  CCR10SPRO_SGPP_Setup.gcode  CCR10SPRO_SGPP_Spacer.gcode  CCR10SPRO_SGPP_Tokens.gcode  CMakeLists.txt
Board games/Spirit Island/: 6345444  CCR10SPRO_2Card_tray_small.gcode  CCR10SPRO_3Card_tray_large.gcode  CCR10SPRO_5Card_tray_medium.gcode  CCR10SPRO_5Card_tray_medium_200.gcode  CCR10SPRO_Adversary_and_Scenario_card_tray.gcode  CCR10SPRO_Blight_Tray.gcode  CCR10SPRO_City_Tray.gcode  CCR10SPRO_Dahan_Tray.gcode  CCR10SPRO_Deeps_tray.gcode  CCR10SPRO_Element_tray.gcode  CCR10SPRO_Energy_Tray.gcode  CCR10SPRO_Explorer_Tray.gcode  CCR10SPRO_Explorer_card_tray.gcode  CCR10SPRO_Fear_Tray.gcode  CCR10SPRO_Incarna_tray.gcode  CCR10SPRO_Quake_tokens.gcode  CCR10SPRO_Reminder_card_tray.gcode  CCR10SPRO_Town__Tray.gcode  CMakeLists.txt
Board games/Through the Ages/: Big box.stl  Fix.gcode  Small box 1.gcode  Small box 1.stl  Small box 2.gcode  Small box 2.stl  Test.gcode
Board games/Twilight Struggle/: 539300  CMakeLists.txt
Board games/War of the Ring/: all_boxes.py  box_tester.FCStd  cards.gcode  cards.stl  companions.gcode  companions.stl  dice_and_control.gcode  dice_and_control.stl  dwarves.gcode  dwarves.stl  easterlings_units.gcode  easterlings_units.stl  elves.gcode  elves.stl  free_peoples_factions.gcode  free_peoples_factions.stl  gondor.gcode  gondor.stl  isengard_units.gcode  isengard_units.stl  minions_hunt.gcode  minions_hunt.stl  nazgul.gcode  nazgul.stl  northmen.gcode  northmen.stl  other_tokens.gcode  other_tokens.stl  rohan.gcode  rohan.stl  sauron_units.gcode  sauron_units.stl  shadow_factions.gcode  shadow_factions.stl
Board games/XCOM/: 4362900  CMakeLists.txt
Electronics/: firefly_shelf.stl  (+5 more)
(+192 files in other folders)
