add_subdirectory(7\ Wonders\ Duel)
add_subdirectory(Ark\ Nova)
add_subdirectory(Arkham\ Horror\ LCG)
add_subdirectory(Cascadia)
add_subdirectory(Eclipse)
add_subdirectory(Great\ Western\ Trail)
add_subdirectory(Pax\ Pamir)
add_subdirectory(Root)
add_subdirectory(Sleeping\ Gods)
add_subdirectory(Twilight\ Struggle)
add_subdirectory(XCOM)
