# https://www.thingiverse.com/thing:4933936
FetchContent_Declare(
  thingiverse_4933936
  URL      https://cdn.thingiverse.com/tv-zip/4933936
  URL_HASH MD5=49b2748f4a2a400daaa7dac360a7a10e
)

# https://www.thingiverse.com/thing:4977191
FetchContent_Declare(
  thingiverse_4977191
  URL      https://cdn.thingiverse.com/tv-zip/4977191
  URL_HASH MD5=7cca74864b4fc29b70c266ac9b7caeb2
)

FetchContent_MakeAvailable(thingiverse_4933936 thingiverse_4977191)
