# https://www.thingiverse.com/thing:4933936
FetchContent_Declare(
  thingiverse_4933936
  URL      https://tv-zip.thingiverse.com/zip/4933936
  URL_HASH MD5=d7ab535ac87eaf4abb78b51f4de355b5
)

# https://www.thingiverse.com/thing:4977191
FetchContent_Declare(
  thingiverse_4977191
  URL      https://tv-zip.thingiverse.com/zip/4977191
  URL_HASH MD5=b1ad8f44fcf9281125a1bc6ea7f1b6a7
)

FetchContent_MakeAvailable(thingiverse_4933936 thingiverse_4977191)
