# https://www.thingiverse.com/thing:5266169
FetchContent_Declare(
  thingiverse_5266169
  URL      https://cdn.thingiverse.com/tv-zip/5266169
  URL_HASH MD5=43f06a9d93b7f3107b22563aaccecbd0
)

# https://www.thingiverse.com/thing:5543151
FetchContent_Declare(
  thingiverse_5543151
  URL      https://cdn.thingiverse.com/tv-zip/5543151
  URL_HASH MD5=ed2bb6ead6881ed287abd63e611311a7
)

FetchContent_MakeAvailable(thingiverse_5266169 thingiverse_5543151)