# https://www.thingiverse.com/thing:5266169
FetchContent_Declare(
  thingiverse_5266169
  URL      https://cdn.thingiverse.com/tv-zip/5266169
  URL_HASH MD5=a07bc6dd72096d884848ba9c54907119
)

# https://www.thingiverse.com/thing:5543151
FetchContent_Declare(
  thingiverse_5543151
  URL      https://cdn.thingiverse.com/tv-zip/5543151
  URL_HASH MD5=5c4c4425947bc6194970923a8d7c23f9
)

FetchContent_MakeAvailable(thingiverse_5266169 thingiverse_5543151)