# https://www.thingiverse.com/thing:5266169
FetchContent_Declare(
  thingiverse_5266169
  URL      https://tv-zip.thingiverse.com/zip/5266169
  URL_HASH MD5=65709b940e213a97ee5c10d389b5e8ab
)

# https://www.thingiverse.com/thing:5543151
FetchContent_Declare(
  thingiverse_5543151
  URL      https://tv-zip.thingiverse.com/zip/5543151
  URL_HASH MD5=d6b24a80757ce2a6243725501458eb08
)

FetchContent_MakeAvailable(thingiverse_5266169 thingiverse_5543151)