# https://www.thingiverse.com/thing:3031566
FetchContent_Declare(
  thingiverse_3031566
  URL      https://tv-zip.thingiverse.com/zip/3031566
  URL_HASH MD5=27f35a566eaf7e0ad5becb9126931d6f
)

FetchContent_MakeAvailable(thingiverse_3031566)

# https://www.thingiverse.com/thing:4669380
FetchContent_Declare(
  thingiverse_4669380
  URL      https://tv-zip.thingiverse.com/zip/4669380
  URL_HASH MD5=f4430b6f08ee749ee43388ba39b01f95
)

FetchContent_MakeAvailable(thingiverse_4669380)