# https://www.thingiverse.com/thing:4670404
# Only money holder is taken from here.
FetchContent_Declare(
  thingiverse_4670404
  URL      https://cdn.thingiverse.com/tv-zip/4670404
  URL_HASH MD5=1a70c5124de1442457050ed424cc077f
)

# https://www.thingiverse.com/thing:5159200
# Only player cylinders boxes (x5) are taken from here.
FetchContent_Declare(
  thingiverse_5159200
  URL      https://cdn.thingiverse.com/tv-zip/5159200
  URL_HASH MD5=2dc565125b5c531e9ec7a2471768a41b
)

# https://www.thingiverse.com/thing:5200405
# Everything from here is printed.
FetchContent_Declare(
  thingiverse_5200405
  URL      https://cdn.thingiverse.com/tv-zip/5200405
  URL_HASH MD5=4ed3472196d8e292e899b5e899fd1c08
)

FetchContent_MakeAvailable(thingiverse_4670404 thingiverse_5159200 thingiverse_5200405)