# https://www.thingiverse.com/thing:4670404
# Only money holder is taken from here.
FetchContent_Declare(
  thingiverse_4670404
  URL      https://tv-zip.thingiverse.com/zip/4670404
  URL_HASH MD5=950495f56a9acabaf16885bc9b2b2586
)

# https://www.thingiverse.com/thing:5159200
# Only player cylinders boxes (x5) are taken from here.
FetchContent_Declare(
  thingiverse_5159200
  URL      https://tv-zip.thingiverse.com/zip/5159200
  URL_HASH MD5=da5e5e5e2e4b1a65c7c76525d78c6b05
)

# https://www.thingiverse.com/thing:5200405
# Everything from here is printed.
FetchContent_Declare(
  thingiverse_5200405
  URL      https://tv-zip.thingiverse.com/zip/5200405
  URL_HASH MD5=c58548379ac450574021dfca17df44e2
)

FetchContent_MakeAvailable(thingiverse_4670404 thingiverse_5159200 thingiverse_5200405)