# https://www.thingiverse.com/thing:3137237
FetchContent_Declare(
  thingiverse_3137237
  URL      https://cdn.thingiverse.com/tv-zip/3137237
  URL_HASH MD5=df8828215fc35cb5699688feec69d01a
)

# https://www.thingiverse.com/thing:3535443
FetchContent_Declare(
  thingiverse_3535443
  URL      https://cdn.thingiverse.com/tv-zip/3535443
  URL_HASH MD5=61e1967b3cf940e9c4a8e0a52d1159a9
)

FetchContent_MakeAvailable(thingiverse_3137237 thingiverse_3535443)