# https://www.thingiverse.com/thing:3137237
FetchContent_Declare(
  thingiverse_3137237
  URL      https://tv-zip.thingiverse.com/zip/3137237
  URL_HASH MD5=8619f777ab27b73f9b5aa3a0479e6921
)

# https://www.thingiverse.com/thing:3535443
FetchContent_Declare(
  thingiverse_3535443
  URL      https://tv-zip.thingiverse.com/zip/3535443
  URL_HASH MD5=15fcb884f3d825f6c0edf89d094b7d53
)

FetchContent_MakeAvailable(thingiverse_3137237 thingiverse_3535443)