# https://www.thingiverse.com/thing:3156604
FetchContent_Declare(
  thingiverse_3156604
  URL      https://cdn.thingiverse.com/tv-zip/3156604
  URL_HASH MD5=42aab2e1a970335fbcbbaccccf668be0
)

# https://www.thingiverse.com/thing:3441335
FetchContent_Declare(
  thingiverse_3441335
  URL      https://cdn.thingiverse.com/tv-zip/3441335
  URL_HASH MD5=5a25284315d4c509d3e907c53fb26092
)

FetchContent_MakeAvailable(thingiverse_3156604 thingiverse_3441335)
