# https://www.thingiverse.com/thing:3156604
FetchContent_Declare(
  thingiverse_3156604
  URL      https://tv-zip.thingiverse.com/zip/3156604
  URL_HASH MD5=ab18af8336cdcd0f1934fea491cce7fe
)

# https://www.thingiverse.com/thing:3441335
FetchContent_Declare(
  thingiverse_3441335
  URL      https://tv-zip.thingiverse.com/zip/3441335
  URL_HASH MD5=4487e38697ee23a583c6a8aae70f3124
)

FetchContent_MakeAvailable(thingiverse_3156604 thingiverse_3441335)
